dev_ws/log/build_2020-11-23_20-02-42/tallest_building/stderr.log
  File "H:\MyProgram\C and C++\ROS\dev_ws\install\Lib\site-packages\tallest_building\client_function.py", line 32
    while rclpy.ok() | flag = 1:
                            ^
SyntaxError: invalid syntax

